# BattleOfRaces

./: .gitignore  BattleOfRaces  CBarack.cpp  CBarack.h  CBuilding.h  CCannonTower.cpp  CElfPeasant.cpp  CElfPeasant.h  CElfTownHall.cpp  CElfTownHall.h  CFarm.h  CHumanInfant.cpp  CHumanInfant.h  CHumanPeasant.cpp  CHumanPeasant.h  CHumanTownHall.cpp  CHumanTownHall.h  CInfant.h  CMakeCache.txt  CMakeLists.txt  COrcPeasant.cpp  COrcPeasant.h  COrcTownHall.cpp  CPeasant.cpp  CTestTestfile.cmake  CTowerOfWizard.cpp  CTowerOfWizard.h  CTownHall.cpp  CTownHall.h  CWarrior.cpp  Class.txt  IUnit.cpp  IUnit.h  Makefile  Readme.md  cmake_install.cmake  main.cpp
headers/: CArcher.h  CArcher.h.gch  CArmy.h  CAttackCommand.h  CBarack.h  CBarack.h.gch  CBuilding.h  CBuilding.h.gch  CCannonTower.h  CCannonTower.h.gch  CCatapult.h  CCatapult.h.gch  CCommand.h  CElfPeasant.h  CElfTownHall.h  CFactoryArcher.h  CFactoryArcher.h.gch  CFactoryBarack.h  CFactoryBarack.h.gch  CFactoryBuilding.h  CFactoryBuilding.h.gch  CFactoryCannon.h  CFactoryCannon.h.gch  CFactoryCatapult.h  CFactoryCatapult.h.gch  CFactoryFarm.h  CFactoryFarm.h.gch  CFactoryHorseman.h  CFactoryHorseman.h.gch  CFactoryInfant.h  CFactoryInfant.h.gch  CFactoryPeasant.h  CFactoryPeasant.h.gch  CFactoryTowerOfWizard.h  CFactoryTowerOfWizard.h.gch  CFactoryTownHall.h  CFactoryTownHall.h.gch  CFactoryWarrior.h  CFactoryWarrior.h.gch  CFactoryWizzard.h  (+28 more)
lib/googletest-master/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  cmake_install.cmake  googletest-distribution.cbp  googletest-distribution.sln
lib/googletest-master/googlemock/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  cmake_install.cmake  gmock.cbp  gmock.sln  gmock.vcxproj  gmock.vcxproj.filters  gmock_main.vcxproj  gmock_main.vcxproj.filters
lib/googletest-master/googlemock/gtest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  cmake_install.cmake  gtest.cbp  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
sources/: CArcher.cpp  CArmy.cpp  CBarack.cpp  CBuilding.cpp  CCannonTower.cpp  CCatapult.cpp  CElfPeasant.cpp  CElfTownHall.cpp  CFactoryArcher.cpp  CFactoryBarack.cpp  CFactoryBuilding.cpp  CFactoryCannonTower.cpp  CFactoryCatapult.cpp  CFactoryFarm.cpp  CFactoryHorseman.cpp  CFactoryInfant.cpp  CFactoryPeasant.cpp  CFactoryTowerOfWizard.cpp  CFactoryTownHall.cpp  CFactoryWarrior.cpp  CFactoryWizzard.cpp  CFarm.cpp  CHorseman.cpp  CHumanInfant.cpp  CHumanPeasant.cpp  CHumanTownHall.cpp  CInfant.cpp  COrcPeasant.cpp  COrcTownHall.cpp  CPeasant.cpp  CTowerOfWizard.cpp  CTownHall.cpp  CUnit.cpp  CWarrior.cpp  CWizzard.cpp  IUnit.cpp
